--- a/Answers/Code/challenge.ipynb
+++ b/Answers/Code/challenge.ipynb
@@ -85,9 +85,9 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": "fintech",
    "language": "python",
-   "name": "dev"
+   "name": "fintech"
   },
   "language_info": {
    "codemirror_mode": {
@@ -99,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "mimetype": "text/x-python",
   "name": "python",
@@ -108,5 +108,5 @@
   "version": 3
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
