--- a/Answers/Code/visual_data_analysis.ipynb
+++ b/Answers/Code/visual_data_analysis.ipynb
@@ -139,9 +139,9 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "fintech",
    "language": "python",
-   "name": "python3"
+   "name": "fintech"
   },
   "language_info": {
    "codemirror_mode": {
@@ -153,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "mimetype": "text/x-python",
   "name": "python",
@@ -162,5 +162,5 @@
   "version": 3
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
